rest/logs-deployment.yaml
##
## You provide this
##
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: logs-deployment
spec:
  selector:
    matchLabels:
      app: logs
  replicas: 1
  template:
    metadata:
      labels:
        app: logs
    spec:
      containers:
      - name: logs
        image: shollatz/logs:v4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
