rest/rest-ingress.yaml
##
## You provide this
##
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /$1
    # kubernetes.io/ingress.class:"gce"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: rest-svc
              servicePort: 5000
